--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <div class="banner">
           <div class="banner-content">
             <h1>
-              Giải pháp công nghệ đồng hành cùng cộng đồng thương mại minh bạch
+              SĂN CỰC PHẨM,<br />
+              GIÁ CỰC SỐC
             </h1>
           </div>
           <div class="banner-intro">
