--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopdi</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css?family=Inter"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./css/comfortaa.css" />
+    <link rel="stylesheet" href="./css/inter.css" />
+    <link rel="stylesheet" href="./css/manrope.css" />
     <link rel="stylesheet" href="./css/app.css" />
   </head>
 
@@ -30,16 +27,16 @@
         </div>
         <div class="navbar-row-column download">
           <button id="download-app" class="navbar-row-column-button">
-            Tải App
+            Download App
           </button>
         </div>
         <div class="navbar-row-column language">
           <div class="navbar-row-column-language">
             <img
               class="navbar-row-column-language-vn"
-              src="./images/vietnam flag.png"
+              src="./images/Flag.png"
             />
-            <span class="navbar-row-column-language-text">Tiếng Việt</span>
+            <span class="navbar-row-column-language-text">English</span>
             <img
               class="navbar-row-column-language-arrow"
               src="./images/keyboard_arrow_down.png"
@@ -53,12 +50,12 @@
         <div class="banner">
           <div class="banner-content">
             <h1>
-              SĂN CỰC PHẨM,<br />
-              GIÁ CỰC SỐC
+              HUNT THE LAST<br />
+              FOR THE BEST
             </h1>
           </div>
           <div class="banner-intro">
-            <span class="banner-intro-text">Xem video giới thiệu</span
+            <span class="banner-intro-text">Watching video</span
             ><span
               ><img class="banner-intro-icon" srcset="./images/play-video.png"
             /></span>
@@ -72,13 +69,13 @@
             </div>
           </div>
           <div class="banner-bottom">
-            <div class="banner-bottom-title">
-              Mua hàng với giá <span> bí mật</span>
-            </div>
+            <div class="banner-bottom-title">About Shopdi</div>
             <div class="banner-bottom-description">
-              Giúp bạn thuận tiện mua hàng chính hãng với giá rẻ thấp hơn thị
-              trường nhờ có cơ chế giá ẩn. Bạn có thể tương tác, tìm kiếm và
-              thanh toán sản phẩm nhanh chóng
+              Shopdi is the first e-commerce platform that uses blockchain
+              technology and NFT to make transaction and product information
+              transparent, putting user experience first, towards building a
+              safe intermediary community for both buyers and sellers to perform
+              transactions and exchange goods.
             </div>
           </div>
         </div>
@@ -87,32 +84,41 @@
         <div class="business-list">
           <div class="business-list-item">
             <div class="business-list-item-brand">
-              <img src="./images/brand1.png" />
+              <img src="./images/brand2.png" />
             </div>
-            <div class="business-list-item-title">Duy Nhất</div>
+            <div class="business-list-item-title">Ecommerce</div>
             <div class="business-list-item-description">
-              Sàn thương mại điện tử duy nhất trên thị trường Việt Nam cung cấp
-              dịch vụ mua hàng với cơ chế giá ẩn.
+              Shopdi is an ecommerce platform specializing in high-end products
+              as well as limited edition items, putting user experience first.
+              Shopdi is not only issuing NFTs for limited items but also
+              organizing campaigns to call for pre-orders for trendy products.
+              Besides, through Shopdi's secondary market, users can exchange
+              like-new items.
             </div>
           </div>
           <div class="business-list-item">
             <div class="business-list-item-brand">
-              <img src="./images/brand2.png" />
+              <img src="./images/brand5.png" />
             </div>
-            <div class="business-list-item-title">Kết Nối</div>
+            <div class="business-list-item-title">Blockchain</div>
             <div class="business-list-item-description">
-              Sàn thương mại điện tử duy nhất trên thị trường Việt Nam cung cấp
-              dịch vụ mua hàng với cơ chế giá ẩn.
+              Shopdi also allows users to buy, sell, pay and transact with a
+              voucher, Shopdi Coin, making cross-border purchases becoming Fast
+              - Convenient - Secure. Moreover, transparency is top respect,
+              especially when applying Blockchain technology to public product
+              details about products as well as charity campaigns.
             </div>
           </div>
           <div class="business-list-item">
             <div class="business-list-item-brand">
               <img src="./images/brand3.png" />
             </div>
-            <div class="business-list-item-title">Thanh toán</div>
+            <div class="business-list-item-title">Shoppertainment</div>
             <div class="business-list-item-description">
-              Sàn thương mại điện tử duy nhất trên thị trường Việt Nam cung cấp
-              dịch vụ mua hàng với cơ chế giá ẩn.
+              Leading the trend of combining "shopping" and "entertainment",
+              Shopdi focuses on providing enjoyable and funny shopping
+              experiences for buyers by integrating game mechanics into the
+              purchase process on the platform.
             </div>
           </div>
         </div>
