--- a/index.html
+++ b/index.html
@@ -30,19 +30,6 @@
             Download App
           </button>
         </div>
-        <div class="navbar-row-column language">
-          <div class="navbar-row-column-language">
-            <img
-              class="navbar-row-column-language-vn"
-              src="./images/Flag.png"
-            />
-            <span class="navbar-row-column-language-text">English</span>
-            <img
-              class="navbar-row-column-language-arrow"
-              src="./images/keyboard_arrow_down.png"
-            />
-          </div>
-        </div>
       </div>
     </nav>
     <main>
@@ -60,14 +47,7 @@
               ><img class="banner-intro-icon" srcset="./images/play-video.png"
             /></span>
           </div>
-          <div class="banner-app">
-            <div class="banner-app-apple">
-              <img srcset="./images/appstore.png" />
-            </div>
-            <div class="banner-app-google">
-              <img srcset="./images/googleplay.png" />
-            </div>
-          </div>
+          <p id="countdown"></p>
           <div class="banner-bottom">
             <div class="banner-bottom-title">About Shopdi</div>
             <div class="banner-bottom-description">
