--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopdi</title>
-    <link rel="stylesheet" href="./css/comfortaa.css" />
-    <link rel="stylesheet" href="./css/inter.css" />
-    <link rel="stylesheet" href="./css/manrope.css" />
-    <link rel="stylesheet" href="./css/app.css" />
+    <link rel="stylesheet" href="./css/comfortaa.css?v=3" />
+    <link rel="stylesheet" href="./css/inter.css?v=3" />
+    <link rel="stylesheet" href="./css/manrope.css?v=3" />
+    <link rel="stylesheet" href="./css/app.css?v=3" />
   </head>
 
   <body>
     <nav class="navbar">
       <div class="container navbar-row">
         <div class="navbar-row-column">
-          <div class="navbar-row-column-menu">
+          <!-- <div class="navbar-row-column-menu">
             <span class="navbar-row-column-menu-icon"></span>
             <span class="navbar-row-column-menu-icon"></span>
             <span class="navbar-row-column-menu-icon"></span>
-          </div>
+          </div> -->
 
           <div class="navbar-row-column-logo">
             <img src="./images/logo master.png" />
@@ -121,7 +121,7 @@
         </p>
       </div>
     </footer>
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/app.js?v=3"></script>
     <!-- sass ./sass/app.scss ./css/app.css --watch -->
   </body>
 
