--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <img src="./images/logo master.png" />
           </div>
         </div>
-        <div class="navbar-row-column download">
+        <!-- <div class="navbar-row-column download">
           <button id="download-app" class="navbar-row-column-button">
             Download App
           </button>
-        </div>
+        </div> -->
       </div>
     </nav>
     <main>
@@ -48,7 +48,7 @@
             /></span>
           </div>
           <p id="countdown"></p>
-          <div class="banner-bottom">
+          <!-- <div class="banner-bottom">
             <div class="banner-bottom-title">About Shopdi</div>
             <div class="banner-bottom-description">
               Shopdi is the first e-commerce platform that uses blockchain
@@ -57,7 +57,7 @@
               safe intermediary community for both buyers and sellers to perform
               transactions and exchange goods.
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <section class="business">
