--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopdi</title>
+    <link rel="icon" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="./css/comfortaa.css?v=3" />
     <link rel="stylesheet" href="./css/inter.css?v=3" />
     <link rel="stylesheet" href="./css/manrope.css?v=3" />
