--- a/index.html
+++ b/index.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopdi</title>
-    <link rel="icon" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./css/comfortaa.css?v=3" />
-    <link rel="stylesheet" href="./css/inter.css?v=3" />
-    <link rel="stylesheet" href="./css/manrope.css?v=3" />
-    <link rel="stylesheet" href="./css/app.css?v=3" />
-  </head>
 
-  <body>
-    <nav class="navbar">
-      <div class="container navbar-row">
-        <div class="navbar-row-column">
-          <!-- <div class="navbar-row-column-menu">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shopdi</title>
+  <link rel="icon" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./css/comfortaa.css?v=4" />
+  <link rel="stylesheet" href="./css/inter.css?v=4" />
+  <link rel="stylesheet" href="./css/manrope.css?v=4" />
+  <link rel="stylesheet" href="./css/app.css?v=4" />
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="container navbar-row">
+      <div class="navbar-row-column">
+        <!-- <div class="navbar-row-column-menu">
             <span class="navbar-row-column-menu-icon"></span>
             <span class="navbar-row-column-menu-icon"></span>
             <span class="navbar-row-column-menu-icon"></span>
           </div> -->
 
-          <div class="navbar-row-column-logo">
-            <img src="./images/logo master.png" />
-          </div>
+        <div class="navbar-row-column-logo">
+          <img src="./images/logo master.png" />
         </div>
-        <!-- <div class="navbar-row-column download">
+      </div>
+      <!-- <div class="navbar-row-column download">
           <button id="download-app" class="navbar-row-column-button">
             Download App
           </button>
         </div> -->
-      </div>
-    </nav>
-    <main>
-      <section class="main">
-        <div class="banner">
-          <div class="banner-content">
-            <h1>
-              HUNT THE LAST<br />
-              FOR THE BEST
-            </h1>
-          </div>
-          <div class="banner-intro">
-            <span class="banner-intro-text">Watching video</span
-            ><span
-              ><img class="banner-intro-icon" srcset="./images/play-video.png"
-            /></span>
-          </div>
-          <p id="countdown"></p>
-          <!-- <div class="banner-bottom">
+    </div>
+  </nav>
+  <main>
+    <section class="main">
+      <div class="banner">
+        <div class="banner-content">
+          <h1>
+            HUNT THE LAST<br />
+            FOR THE BEST
+          </h1>
+        </div>
+        <div class="banner-intro">
+          <span class="banner-intro-text">Watching video</span><span><img class="banner-intro-icon"
+              srcset="./images/play-video.png" /></span>
+        </div>
+        <p id="countdown"></p>
+        <!-- <div class="banner-bottom">
             <div class="banner-bottom-title">About Shopdi</div>
             <div class="banner-bottom-description">
               Shopdi is the first e-commerce platform that uses blockchain
@@ -59,72 +58,12 @@
               transactions and exchange goods.
             </div>
           </div> -->
-        </div>
-      </section>
-      <section class="business">
-        <div class="business-list">
-          <div class="business-list-item">
-            <div class="business-list-item-brand">
-              <img src="./images/brand2.png" />
-            </div>
-            <div class="business-list-item-title">Ecommerce</div>
-            <div class="business-list-item-description">
-              Shopdi is an ecommerce platform specializing in high-end products
-              as well as limited edition items, putting user experience first.
-              Shopdi is not only issuing NFTs for limited items but also
-              organizing campaigns to call for pre-orders for trendy products.
-              Besides, through Shopdi's secondary market, users can exchange
-              like-new items.
-            </div>
-          </div>
-          <div class="business-list-item">
-            <div class="business-list-item-brand">
-              <img src="./images/brand5.png" />
-            </div>
-            <div class="business-list-item-title">Blockchain</div>
-            <div class="business-list-item-description">
-              Shopdi also allows users to buy, sell, pay and transact with a
-              voucher, Shopdi Coin, making cross-border purchases becoming Fast
-              - Convenient - Secure. Moreover, transparency is top respect,
-              especially when applying Blockchain technology to public product
-              details about products as well as charity campaigns.
-            </div>
-          </div>
-          <div class="business-list-item">
-            <div class="business-list-item-brand">
-              <img src="./images/brand3.png" />
-            </div>
-            <div class="business-list-item-title">Shoppertainment</div>
-            <div class="business-list-item-description">
-              Leading the trend of combining "shopping" and "entertainment",
-              Shopdi focuses on providing enjoyable and funny shopping
-              experiences for buyers by integrating game mechanics into the
-              purchase process on the platform.
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer-powered-by">
-        <span class="footer-powered-by-text">Powered by</span>
-        <div class="footer-powered-by-img">
-          <img src="./images/logo footer.png" />
-        </div>
       </div>
-      <div class="footer-copy-right">
-        <p>
-          © COPYRIGHT 2022 <br />
-          <span class="underline">TERMS & CONDITIONS,</span>
-          <span class="underline">PRIVACY POLICY,</span>
-          <span class="underline">FAQ</span>
-        </p>
-      </div>
-    </footer>
-    <script src="./scripts/app.js?v=3"></script>
+    </section>
+    <script src="./scripts/app.js?v=4"></script>
     <!-- sass ./sass/app.scss ./css/app.css --watch -->
-  </body>
+</body>
 
-  .
+.
+
 </html>
