--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             FOR THE BEST
           </h1>
         </div>
-        <div class="banner-intro">
+        <!-- <div class="banner-intro">
           <span class="banner-intro-text">Watching video</span><span><img class="banner-intro-icon"
               srcset="./images/play-video.png" /></span>
-        </div>
+        </div> -->
         <p id="countdown"></p>
         <!-- <div class="banner-bottom">
             <div class="banner-bottom-title">About Shopdi</div>
